@@ -1,134 +1,217 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-        
-  
-  <modelVersion>4.0.0</modelVersion>
-    
-  
-  <groupId>cz.masci.javafx</groupId>
-  <artifactId>playground</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <packaging>pom</packaging>
-  
-  <name>* Playground - JavaFX *</name>
-        
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <java.version>17</java.version>
-    
-    <maven.compiler.source>${java.version}</maven.compiler.source>
-    <maven.compiler.target>${java.version}</maven.compiler.target>
-    
-    <javafx.version>17.0.0.1</javafx.version>
-    <javafx.plugin.version>0.0.6</javafx.plugin.version>
-    
-    <projectlombok.version>1.18.20</projectlombok.version>
-    <slf4j.version>1.7.32</slf4j.version>
-  </properties>
-      
-  
-  <dependencyManagement>
-    <dependencies>
-      <dependency>
-        <groupId>org.openjfx</groupId>
-        <artifactId>javafx-controls</artifactId>
-        <version>${javafx.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.openjfx</groupId>
-        <artifactId>javafx-fxml</artifactId>
-        <version>${javafx.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.projectlombok</groupId>
-        <artifactId>lombok</artifactId>
-        <version>${projectlombok.version}</version>
-        <scope>provided</scope>
-      </dependency>
-      <dependency>
-        <groupId>org.slf4j</groupId>
-        <artifactId>slf4j-api</artifactId>
-        <version>${slf4j.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.slf4j</groupId>
-        <artifactId>slf4j-simple</artifactId>
-        <version>${slf4j.version}</version>
-      </dependency>
-    </dependencies>
-  </dependencyManagement>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-  <dependencies>
-    <dependency>
-      <groupId>org.projectlombok</groupId>
-      <artifactId>lombok</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-api</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-simple</artifactId>
-    </dependency>
-  </dependencies>
-    
-  <build>
-    <pluginManagement>
-      <plugins>
-        <plugin>
-          <groupId>org.openjfx</groupId>
-          <artifactId>javafx-maven-plugin</artifactId>
-          <version>${javafx.plugin.version}</version>
-          <executions>
-            <execution>
-              <!-- Default configuration for running -->
-              <!-- Usage: mvn clean javafx:run -->
-              <id>default-cli</id>
-            </execution>
-            <execution>
-              <!-- Configuration for manual attach debugging -->
-              <!-- Usage: mvn clean javafx:run@debug -->
-              <id>debug</id>
-              <configuration>
-                <options>
-                  <option>-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=localhost:8000</option>
-                </options>
-              </configuration>
-            </execution>
-            <execution>
-              <!-- Configuration for automatic IDE debugging -->
-              <id>ide-debug</id>
-              <configuration>
-                <options>
-                  <option>-agentlib:jdwp=transport=dt_socket,server=n,address=${jpda.address}</option>
-                </options>
-              </configuration>
-            </execution>
-            <execution>
-              <!-- Configuration for automatic IDE profiling -->
-              <id>ide-profile</id>
-              <configuration>
-                <options>
-                  <option>${profiler.jvmargs.arg1}</option>
-                  <option>${profiler.jvmargs.arg2}</option>
-                  <option>${profiler.jvmargs.arg3}</option>
-                  <option>${profiler.jvmargs.arg4}</option>
-                  <option>${profiler.jvmargs.arg5}</option>
-                </options>
-              </configuration>
-            </execution>
-          </executions>
-        </plugin>
-      </plugins>
-    </pluginManagement>
-  </build>
-  
-  <modules>
-    <module>demo-button</module>
-    <module>demo-table-detail</module>
-    <module>demo-springfx-crud</module>
-      <module>demo-slide</module>
-  </modules>
-  
+    <modelVersion>4.0.0</modelVersion>
+
+    <groupId>cz.masci.javafx</groupId>
+    <artifactId>playground</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <packaging>pom</packaging>
+
+    <name>* Playground - JavaFX *</name>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <java.version>21</java.version>
+
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
+
+        <javafx.version>21</javafx.version>
+        <javafx.plugin.version>0.0.8</javafx.plugin.version>
+        <materialfx.version>11.17.0</materialfx.version>
+        <dirtyfx.version>0.1.2</dirtyfx.version>
+        <reactfx.version>2.0-M5</reactfx.version>
+        <commons.springfx.version>0.0.29</commons.springfx.version>
+
+        <projectlombok.version>1.18.30</projectlombok.version>
+        <slf4j.version>1.7.32</slf4j.version>
+        <junit.version>5.8.1</junit.version>
+        <testfx.version>4.0.17</testfx.version>
+        <maven.surefire.plugin.version>3.2.2</maven.surefire.plugin.version>
+    </properties>
+
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>cz.masci.commons</groupId>
+                <artifactId>commons-springfx-bom</artifactId>
+                <version>${commons.springfx.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-controls</artifactId>
+                <version>${javafx.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-fxml</artifactId>
+                <version>${javafx.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>${projectlombok.version}</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>${slf4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-simple</artifactId>
+                <version>${slf4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.github.palexdev</groupId>
+                <artifactId>materialfx</artifactId>
+                <version>${materialfx.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.nield</groupId>
+                <artifactId>dirtyfx</artifactId>
+                <version>${dirtyfx.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.reactfx</groupId>
+                <artifactId>reactfx</artifactId>
+                <version>${reactfx.version}</version>
+            </dependency>
+
+            <!-- tests -->
+            <dependency>
+                <groupId>org.junit.jupiter</groupId>
+                <artifactId>junit-jupiter</artifactId>
+                <version>${junit.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.testfx</groupId>
+                <artifactId>testfx-junit5</artifactId>
+                <version>${testfx.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.testfx</groupId>
+                <artifactId>testfx-core</artifactId>
+                <version>${testfx.version}</version>
+                <scope>compile</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+        </dependency>
+    </dependencies>
+
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-site-plugin</artifactId>
+                    <version>3.8.2</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.11.0</version>
+                    <configuration>
+                        <release>${java.version}</release>
+                        <annotationProcessorPaths>
+                            <path>
+                                <groupId>org.projectlombok</groupId>
+                                <artifactId>lombok</artifactId>
+                                <version>${projectlombok.version}</version>
+                            </path>
+                        </annotationProcessorPaths>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.openjfx</groupId>
+                    <artifactId>javafx-maven-plugin</artifactId>
+                    <version>${javafx.plugin.version}</version>
+                    <executions>
+                        <execution>
+                            <!-- Default configuration for running -->
+                            <!-- Usage: mvn clean javafx:run -->
+                            <id>default-cli</id>
+                        </execution>
+                        <execution>
+                            <!-- Configuration for manual attach debugging -->
+                            <!-- Usage: mvn clean javafx:run@debug -->
+                            <id>debug</id>
+                            <configuration>
+                                <options>
+                                    <option>-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=localhost:8000</option>
+                                </options>
+                            </configuration>
+                        </execution>
+                        <execution>
+                            <!-- Configuration for automatic IDE debugging -->
+                            <id>ide-debug</id>
+                            <configuration>
+                                <options>
+                                    <option>-agentlib:jdwp=transport=dt_socket,server=n,address=${jpda.address}</option>
+                                </options>
+                            </configuration>
+                        </execution>
+                        <execution>
+                            <!-- Configuration for automatic IDE profiling -->
+                            <id>ide-profile</id>
+                            <configuration>
+                                <options>
+                                    <option>${profiler.jvmargs.arg1}</option>
+                                    <option>${profiler.jvmargs.arg2}</option>
+                                    <option>${profiler.jvmargs.arg3}</option>
+                                    <option>${profiler.jvmargs.arg4}</option>
+                                    <option>${profiler.jvmargs.arg5}</option>
+                                </options>
+                            </configuration>
+                        </execution>
+                    </executions>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>${maven.surefire.plugin.version}</version>
+                    <configuration>
+                        <argLine>
+                            --add-exports javafx.graphics/com.sun.javafx.application=testfx.core
+                            --add-opens javafx.graphics/com.sun.javafx.application=testfx.core
+                        </argLine>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
+
+    <modules>
+        <module>demo-button</module>
+        <module>demo-table-detail</module>
+        <module>demo-springfx-crud</module>
+        <module>demo-slide</module>
+        <module>demo-home-screen</module>
+        <module>demo-bindings</module>
+        <module>demo-wizard</module>
+        <module>demo-wizard-text</module>
+    </modules>
+
 </project>
